--- a/client/assets/styles/styles.css
+++ b/client/assets/styles/styles.css
@@ -11,11 +11,10 @@ a:visited {
 }
 
 body {
-  font-family: Helvetica;
   font-weight: 400;
   line-height: 1.38;
   color: rgb(255, 255, 255);
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Special Elite', cursive;
 }
 
 .collection-username {
@@ -898,8 +897,6 @@ body {
 }
 
 .logotext span {
-  font-family: Raleway;
-  font-style: inherit;
   font-size: 3.438rem;
   font-weight: 500;
 }
