--- a/client/assets/styles/styles.css
+++ b/client/assets/styles/styles.css
@@ -22,6 +22,23 @@ body {
   color: white;
 }
 
+
+.arrow-up {
+  width: 0; 
+  height: 0; 
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid #DF691A;
+}
+
+.arrow-down {
+  width: 0; 
+  height: 0; 
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid #DF691A;
+}
+
 .chromeaddurl,
 .linkview {
   background-color: rgb(255, 255, 255);
