--- a/client/assets/styles/styles.css
+++ b/client/assets/styles/styles.css
@@ -26,57 +26,6 @@ html {
   display: inline-block;
 }
 
-.star {
-   margin: 50px 0;
-   position: relative;
-   display: block;
-   color: yellow;
-   width: 0px;
-   height: 0px;
-   border-right:  50px solid transparent;
-   border-bottom: 35px  solid yellow;
-   border-left:   50px solid transparent;
-   -moz-transform:    rotate(35deg);
-   -webkit-transform: rotate(35deg);
-   -ms-transform:     rotate(35deg);
-   -o-transform:      rotate(35deg);
-}
-
-.star:before {
-   border-bottom: 40px solid yellow;
-   border-left: 30px solid transparent;
-   border-right: 30px solid transparent;
-   position: absolute;
-   height: 0;
-   width: 0;
-   top: -45px;
-   left: -65px;
-   display: block;
-   content: '';
-   -webkit-transform: rotate(-35deg);
-   -moz-transform:    rotate(-35deg);
-   -ms-transform:     rotate(-35deg);
-   -o-transform:      rotate(-35deg);
-}
-
-.star:after {
-   position: absolute;
-   display: block;
-   color: yellow;
-   top: 3px;
-   left: -35px;
-   width: 0px;
-   height: 0px;
-   border-right: 50px solid transparent;
-   border-bottom: 35px solid yellow;
-   border-left: 50px solid transparent;
-   -webkit-transform: rotate(-70deg);
-   -moz-transform:    rotate(-70deg);
-   -ms-transform:     rotate(-70deg);
-   -o-transform:      rotate(-70deg);
-   content: '';
-}
-
 a {
   text-decoration: none;
 }
@@ -120,6 +69,7 @@ body {
   font-size: 1.3rem;
   cursor: pointer;
   text-align: left;
+  color: #F4513E;
 }
 
 .signin {
@@ -147,7 +97,8 @@ body {
 }
 
 .collection-box {
-  padding: 0px 5px 10px 5px;
+  text-align: left;
+  padding: 0px 0px 10px 0px;
 }
 
 .collection-box:hover {
@@ -157,8 +108,17 @@ body {
 .collection-title {
   color: #F4513E;
 }
+
 .collection-description {
+  padding: 5px;
   font-size: 1rem;
   text-align: left;
   color: #D0B639;
+}
+
+.logo {
+  float: right;
+  right: 0;
+  width: 40px;
+  display: inline;
 }
