--- a/client/assets/styles/styles.css
+++ b/client/assets/styles/styles.css
@@ -122,3 +122,48 @@ body {
   width: 40px;
   display: inline;
 }
+
+.modal-overlay {
+  position: fixed;
+  z-index:9999;
+  top: 0px;
+  left: 0px;
+  width:100%;
+  height:100%;
+  background-color:#000000;
+  opacity: 0.8;
+}
+
+.modal-dialog {
+  z-index:10000;
+  position: fixed;
+  width: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  background-color: #DD2C36;
+  box-shadow: 4px 4px 80px #000;
+}
+
+.modal-dialog-content {
+  text-align: center;
+  padding:10px;
+  color: white;
+}
+
+.modal-dialog-content input{
+  width: 60%;
+}
+
+.modal-close {
+  position: fixed;
+  top: 3px;
+  right: 5px;
+  padding: 5px;
+  cursor: pointer;
+  font-size: 120%;
+  display: inline-block;
+  font-weight: bold;
+}
