--- a/client/assets/styles/styles.css
+++ b/client/assets/styles/styles.css
@@ -27,11 +27,13 @@ html {
 }
 
 a {
+  color: white;
   text-decoration: none;
 }
 
 a:visited {
   color: white;
+  text-decoration: none;
 }
 
 body {
