--- a/client/assets/styles/styles.css
+++ b/client/assets/styles/styles.css
@@ -27,12 +27,12 @@ html {
 }
 
 a {
-  color: white;
+  color: #FFEC01;
   text-decoration: none;
 }
 
 a:visited {
-  color: white;
+  color: #FFEC01;
   text-decoration: none;
 }
 
@@ -42,29 +42,6 @@ body {
   text-align: center;
   background-color: #3E80C5;
   font-family: 'Lobster', cursive;
-}
-
-@-webkit-keyframes pulse { 
-    0% { -webkit-transform: scale(1); } 
-    50% { -webkit-transform: scale(1.9); } 
-    100% { -webkit-transform: scale(1); } 
-} 
-
-@keyframes pulse { 
-    0% { transform: scale(1); } 
-    50% { transform: scale(1.9); } 
-    100% { transform: scale(1); } 
-} 
-
-.pulse {
-    animation-duration: .5s;
-    -webkit-animation-duration: .5s;
-    -webkit-animation-name: pulse; 
-    animation-name: pulse;
-    animation-iteration-count: infinite; 
-    -webkit-animation-iteration-count: infinite;  
-    -webkit-animation-fill-mode: both; 
-    animation-fill-mode: both;
 }
 
 .logo {
@@ -80,6 +57,7 @@ body {
 }
 
 .user-button {
+  cursor: pointer;
   color: white;
   border: 1px solid white;
   display: inline-block;
@@ -108,6 +86,7 @@ body {
 }
 
 .collection-title {
+  width: auto;
   color: #F4513E;
 }
 
@@ -115,7 +94,7 @@ body {
   padding: 5px;
   font-size: 1rem;
   text-align: left;
-  color: #D0B639;
+  color: #FFEC01;
 }
 
 .logo {
@@ -168,4 +147,9 @@ body {
   font-size: 120%;
   display: inline-block;
   font-weight: bold;
+}
+
+.modal-iframe {
+  width: 90%;
+  height: 300px;
 }
