refactoring to use multiple controllers

--- a/extension/chrome/app/templates/collection.tpl.html
+++ b/extension/chrome/app/templates/collection.tpl.html
@@ -1,5 +1,7 @@
 <div>
-  Current: {{current}}
+  {{current}}
+  <div>{{current.title}}</div>
+  <div>{{current.description}}</div>
   <button>Previous Site</button>
   <button>Next Site</button>
 </div>
