--- a/extension/chrome/app/templates/collections.tpl.html
+++ b/extension/chrome/app/templates/collections.tpl.html
@@ -1,5 +1,5 @@
 <div>
   <div ng-repeat="collection in collections">
-    <div ui-sref="collection({collection: collection})">{{collection.title}}</div>
+    <div ng-click="goTo(collection)">{{collection.title}}</div>
   </div>
 </div>
