--- a/client/assets/styles/styles.css
+++ b/client/assets/styles/styles.css
@@ -76,6 +76,12 @@ body {
   width: 60%;
 }
 
+.description-box {
+  width: 60%;
+  color: black;
+  font-size: .9rem;
+}
+
 .collection-box {
   text-align: left;
   padding: 0px 0px 10px 0px;
